ALIGNMENT FIX

--- a/client/src/pages/MainPage.css
+++ b/client/src/pages/MainPage.css
@@ -1,3 +1,7 @@
+.main-box {
+  height: 100vh;
+}
+
 .iron-frames-header {
   text-align: center;
   margin-top: 70px;
